--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
               <h4 class="works-heading">learnera</h4>
               <h5>
                 learnera is an android app for students of rajagiri college using
-            which they could check their academic metrics and receive
-            notifications of the right thing at the right time.
+                which they could check their academic metrics and receive
+                notifications of the right thing at the right time.
               </h5>
             </div>
           </div>
@@ -197,8 +197,6 @@
             </div>
             <div class="my-works-img"></div>
           </div>
-
-
           <div class="work-container work-container-left">
             <div class="my-works-img"></div>
             <div class="my-work-info-container">
@@ -220,7 +218,6 @@
             </div>
             <div class="my-works-img"></div>
           </div>
-
           <div class="work-container work-container-left">
             <div class="my-works-img"></div>
             <div class="my-work-info-container">
@@ -242,7 +239,6 @@
             </div>
             <div class="my-works-img"></div>
           </div>
-
           <div class="work-container work-container-left">
             <div class="my-works-img"></div>
             <div class="my-work-info-container">
@@ -264,11 +260,8 @@
             </div>
             <div class="my-works-img"></div>
           </div>
-
-      
         </div>
       </div>
-     
       <div class="work-experience">
         <h4 class="work-experience-heading">work experience</h4>
         <div class="card-sunken work-experience-container">
@@ -294,84 +287,93 @@
     </div>
   </section>
   <section id="achievements">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-header-text">achievements</h2>
-                <div class="section-header-underline"></div>
-            </div>
-            <div class="card-sunken achievements-container">
-                <div class="achievements-row-lg">
-                    <div class="achievements-card bg-purple-grad">
-                        <h4>onne app</h4>
-                        <p>role</p>
-                        <h5>software engineer</h5>
-                        <p>experience</p>
-                        <h5>1.5 years</h5>
-                    </div>
-                    <div class="achievements-card card-elevated">
-                        <h4>more...</h4>
-                        <p>&nbsp;</p>
-                        <h5>&nbsp;</h5>
-                        <p>...</p>
-                        <h5>coming soon</h5>
-                    </div>
-                    <div class="achievements-card">
-                        <h4>&nbsp;</h4>
-                        <p>&nbsp;</p>
-                        <h5>&nbsp;</h5>
-                        <p>&nbsp;</p>
-                        <h5>&nbsp;</h5>
-                    </div>
-                    <div class="achievements-card">
-                        <h4>&nbsp;</h4>
-                        <p>&nbsp;</p>
-                        <h5>&nbsp;</h5>
-                        <p>&nbsp;</p>
-                        <h5>&nbsp;</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-  <!-- <section id="education">
-        <div class="section">
-            <h3>Education</h3>
-            <table>
-                <tr class="content-education">
-                    <td></td>
-                    <td class="indicator-education indicator-education-selected"></td>
-                    <td>
-                        <div class="content-education-right">
-                            <h5>Bachelor's Degree in Information Technology</h5>
-                            <h6>Rajagiri School of Engineering and Technology 2015-19</h6>
-                        </div>
-                    </td>
-                </tr>
+    <div class="achievements-container container">
+      <div class="section-header">
+        <h2 class="section-header-text">achievements</h2>
+        <div class="section-header-underline"></div>
+      </div>
+      <div class="card-sunken achievements-container">
+        <div class="achievements-row-lg">
+          <div class="achievements-card bg-grey-grad">
+            <h4>udacity nanodegree</h4>
+            <p>topic</p>
+            <h5>basics of neural networks</h5>
+            <p>certified on</p>
+            <h5>2018</h5>
+          </div>
+          <div class="achievements-card bg-grey-grad">
+            <h4>special jury award</h4>
+            <p>event</p>
+            <h5>ibs travel hackathon</h5>
+            <p>received on</p>
+            <h5>2019</h5>
+          </div>
+          <div class="achievements-card bg-grey-grad">
+            <h4>coursera certification</h4>
+            <p>topic</p>
+            <h5>machine learning with python</h5>
+            <p>certified on</p>
+            <h5>2019</h5>
+          </div>
+          <div class="achievements-card bg-grey-grad">
+            <h4>ready to take off prize</h4>
+            <p>event</p>
+            <h5>iata ndc hackathon kochi</h5>
+            <p>received on</p>
+            <h5>2019</h5>
+          </div>
+          <div class="achievements-card bg-grey-grad">
+            <h4>winner</h4>
+            <p>event</p>
+            <h5>zeal hack cherthala</h5>
+            <p>received on</p>
+            <h5>2019</h5>
+          </div>
+          <div class="achievements-card bg-grey-grad">
+            <h4>finalist</h4>
+            <p>event</p>
+            <h5>smart india hackathon</h5>
+            <p>received on</p>
+            <h5>2019</h5>
+          </div>
 
-                <tr class="content-education">
-                    <td>
-                        <div class="content-education-left">
-                            <h5>Higher Secondary School</h5>
-                            <h6>Don Bosco Senior Secondary School, Vaduthala 2013-15</h6>
-                        </div>
-                    </td>
-                    <td class="indicator-education indicator-education-selected"></td>
-                    <td></td>
-                </tr>
-
-                <tr class="content-education">
-                    <td></td>
-                    <td class="indicator-education indicator-education-selected"></td>
-                    <td>
-                        <div class="content-education-right">
-                            <h5>Matriculation</h5>
-                            <h6>Don Bosco Senior Secondary School, Vaduthala 2012-13</h6>
-                        </div>
-                    </td>
-                </tr>
-            </table>
         </div>
-    </section>-->
+      </div>
+    </div>
+  </section>
+  <section id="education">
+    <div class="education-container">
+      <div class="section-header">
+        <h2 class="section-header-text">education</h2>
+        <div class="section-header-underline"></div>
+        <div class="card-sunken education-container">
+          <div class="education-row-lg">
+            <div class="education-card bg-green-grad">
+              <h4>bachelors degree</h4>
+              <p>in</p>
+              <h5>information technology</h5>
+              <p>with cgpa of</p>
+              <h5>7.48</h5>
+            </div>
+            <div class="education-card bg-blue-grad">
+              <h4>higher secondary</h4>
+              <p>certified by</p>
+              <h5>indian school certificate</h5>
+              <p>with</p>
+              <h5>72%</h5>
+            </div>
+            <div class="education-card bg-yellow-grad">
+              <h4>high school</h4>
+              <p>certified by</p>
+              <h5>indian certificate of secondary education</h5>
+              <p>with</p>
+              <h5>83%</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <section id="contact">
     <div class="contact-container container">
       <div class="section-header">
