responsive intro section, works section temporary fix

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
         <li class="nav-menu-item menu-selected"><a href="#home">Home</a></li>
         <li class="nav-menu-item"><a href="#skills">Skills</a></li>
         <li class="nav-menu-item"><a href="#works">Works</a></li>
-        <!-- <li class="nav-menu-item"><a href="#achievements">Achievements</a></li> -->
-        <!-- <li class="nav-menu-item"><a href="#education">Education</a></li> -->
+        <li class="nav-menu-item"><a href="#achievements">Achievements</a></li> 
+        <li class="nav-menu-item"><a href="#education">Education</a></li>
         <li class="nav-menu-item"><a href="#contact">Contact</a></li>
         <!-- <li class="nav-menu-item toggle-theme"><a href="javascript:void(0);">Toggle Dark Theme</a></li> -->
       </ul>
     </nav>
   </header>
   <section id="bio">
-    <div class="bio-container container">
+    <div class="bio-container">
       <div class="bio-image-container card-elevated">
         <img src="./images/cover.jpg" alt="Photograph of Prabhashankar Kannapan" />
       </div>
