--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="./images/favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <meta property="og:title" content="Prabhashankar Kannapan" />
-  <meta property="og:image" content="./images/cover.jpg" />
+  <meta property="og:image" content="./images/meta-image.png" />
   <meta property="og:description"
     content="Coffee, Code and Dark Mode! I am a Software Engineer specialized in cross platform mobile app development and full stack web development." />
   <meta property="og:url" content="https://www.prabhashankar.web.app" />
