partial fix works

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       </div>
       <div>
         <h4 class="work-experience-heading">my works</h4>
-        <div class="my-works-container flex-container card-sunken">
+        <div class="my-works-container container card-sunken">
           <div class="work-container work-container-left">
             <div class="my-works-img"></div>
             <div class="my-work-info-container">
