--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
       </div>
       <div class="work-experience">
         <h4 class="work-experience-heading">work experience</h4>
-        <div class="card-sunken work-experience-container">
+        <div class="card-sunken work-experience-container container">
           <div class="work-experience-row-lg">
             <div class="work-experience-card bg-purple-grad">
               <h4>onne app</h4>
