--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li class="nav-menu-item menu-selected"><a href="#home">Home</a></li>
         <li class="nav-menu-item"><a href="#skills">Skills</a></li>
         <li class="nav-menu-item"><a href="#works">Works</a></li>
-        <li class="nav-menu-item"><a href="#achievements">Achievements</a></li> 
+        <li class="nav-menu-item"><a href="#achievements">Achievements</a></li>
         <li class="nav-menu-item"><a href="#education">Education</a></li>
         <li class="nav-menu-item"><a href="#contact">Contact</a></li>
         <!-- <li class="nav-menu-item toggle-theme"><a href="javascript:void(0);">Toggle Dark Theme</a></li> -->
@@ -244,8 +244,8 @@
             <div class="my-work-info-container">
               <h4 class="works-heading">mohfw tracker</h4>
               <p>
-                klant is an e-commerce platform for small scale businesses to sell
-                their products to the massess at ease.
+                mohfw tracker is an android application developed during smart india hackathon for the ministry of health and family welfare, india.
+                it enables the authorities to track health workers in their assigned area and log their works.
               </p>
             </div>
           </div>
@@ -253,9 +253,8 @@
             <div class="my-work-info-container">
               <h4 class="works-heading">stokal</h4>
               <p>
-                android application for students of rajagiri college to check
-                their academic metrics and notifications with the click of a
-                button.
+                stokal is an all in one web app for your everyday stock trading calculations. this application helps you
+                to make a calculated approach while trading in stocks.
               </p>
             </div>
             <div class="my-works-img"></div>
