added work experience

--- a/index.html
+++ b/index.html
@@ -265,6 +265,13 @@
         <h4 class="work-experience-heading">work experience</h4>
         <div class="card-sunken work-experience-container container">
           <div class="work-experience-row-lg">
+            <div class="work-experience-card bg-blue-grad">
+              <h4>frozenbits</h4>
+              <p>role</p>
+              <h5>co-founder</h5>
+              <p>experience</p>
+              <h5>currently working here...</h5>
+            </div>
             <div class="work-experience-card bg-purple-grad">
               <h4>onne app</h4>
               <p>role</p>
