edit in experience

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         <div class="skills-sector-container flex-item-right">
           <h4 class="skills-sector-heading">&nbsp;</h4>
           <h5>web application development</h5>
-          <p>1 year experience</p>
+          <p>1.5 years experience</p>
           <div class="progressbar-container card-elevated">
-            <div class="progressbar bg-blue-grad progress-web-app"></div>
+            <div class="progressbar bg-yellow-grad progress-web-app"></div>
           </div>
           <p class="inline">experience level</p>
           <h5 class="inline">intermediate</h5>
